# TEDMS

./: .gitignore  README.md  开发实战.pptx
ServerDemo/: CMakeLists.txt  ServerApp.cpp  a.cpp  b.cpp  c.cpp
ServerDemo/Cfgs/: config.ini
ServerDemo/Servers/: CMakeLists.txt
ServerDemo/Servers/includes/: ServerBase.h  ServersManager.h
ServerDemo/Servers/src/: ServerBase.cpp  ServersManager.cpp
ServerDemo/TestLib/: CMakeLists.txt  TestLib.cpp  TestLib.h
ServerDemo/Utils/: CMakeLists.txt
ServerDemo/Utils/includes/: ConfigHelper.h  datetime.h  logger.h
ServerDemo/Utils/src/: ConfigHelper.cpp  datetime.cpp
ServerDemo/configs/: config.ini
ServerDemo/defines/: CMakeLists.txt  Common.h  Global.h.in  RetCodeDefine.h  ServerDefine.h
ServerDemo/src/: Server.cpp
TestSolution/: TestSolution.sln
TestSolution/Clent/: Clent.vcxproj  Client.cpp
TestSolution/Clent/x64/Debug/: Client.exe.recipe  Client.ilk  vc143.idb
TestSolution/Clent/x64/Debug/Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TestSolution/Server/: DateTime.cpp  Server.cpp  Server.vcxproj
TestSolution/Server/x64/Debug/: Server.exe.recipe  Server.ilk  vc143.idb
TestSolution/Server/x64/Debug/Server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
